[project]
name = "contentimport"
version = "0.5"
description = "Custom import based on collective.exportimport"
license = "GPL-2.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Philip Bauer", email = "bauer@starzel.de" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Plone",
    "Framework :: Plone :: Addon",
    "Framework :: Plone :: 6.1",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "setuptools",
    "collective.exportimport",
    "beautifulsoup4",
]

[project.entry-points."z3c.autoinclude.plugin"]
target = "plone"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
